@@ -4,6 +4,12 @@ from pyp2rpmlib import settings
 def name_for_python_version(name, version):
     return utils.rpm_name(name, version)
 
+def script_name_for_python_version(name, version):
+    if version == settings.DEFAULT_PYTHON_VERSION:
+        return name
+    else:
+        return 'python%s-%s' % (version, name)
+
 def sitedir_for_python_version(name, version):
     if version == settings.DEFAULT_PYTHON_VERSION:
         return name
@@ -22,4 +28,8 @@ def macroed_pkg_name(name):
     else:
         return '%{pypi_name}'
 
-__all__ = [name_for_python_version, sitedir_for_python_version, python_bin_for_python_version, macroed_pkg_name]
+__all__ = [name_for_python_version,
+           script_name_for_python_version,
+           sitedir_for_python_version,
+           python_bin_for_python_version,
+           macroed_pkg_name]
